# rust-study

basics/: .gitignore  :memory  Cargo.toml  Makefile  README.md
basics/datastore/: memory
basics/datastore/sqlite/: 000001_create_table_permissions.sql  000002_create_table_subjects.sql  000003_create_table_roles.sql  000004_create_table_groups.sql
basics/src/: access_checker.rs  groups.rs  main.rs  operations.rs  permissions.rs  repositories.rs  resources.rs  roles.rs  subjects.rs
basics/src/application/: access_checker.rs  mod.rs  subjects.rs
basics/src/domain/: groups.rs  mod.rs  operations.rs  permissions.rs  repositories.rs  resources.rs  roles.rs  subjects.rs
basics/src/infrastructure/: repositories.rs
basics/src/infrastructure/sqlite/: error.rs  group.rs  mod.rs  permission.rs  role.rs  subject.rs
lists/src/: first.rs
messages/: Cargo.toml
messages/src/: main.rs
messages/src/api/: messages.rs  users.rs
messages/src/entities/: message.rs  user.rs
messages/src/repositories/: message.rs  user.rs
messages/src/services/: message.rs  user.rs
mybank/: Cargo.toml  Makefile
mybank/database/migrations/: 0_create_table_events.up.sql  1_create_table_snapshots.up.sql  3_create_table_bank_account_view.down.sql  3_create_table_bank_account_view.up.sql
mybank/src/: aggregate.rs  aggregate_tests.rs  application.rs  commands.rs  domain_events.rs  errors.rs  main.rs  queries.rs  services.rs
