[package]
name = "basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
async-trait = "0.1.72"
chrono = "0.4.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.sqlx]
version = "0.7"
features = [
    "runtime-async-std",
    "sqlite",
    "migrate"
]


[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
